--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -78,7 +78,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
   width: 100%;
   display: flex;
   margin: 0 auto;
-  background-color: #f3f2f1;
+  background-color: govuk-colour('black', $variant: 'tint-95');
 }
 
 .split-panel--bg-white {
@@ -125,8 +125,8 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 }
 
 .x-govuk-related-navigation {
-  @include govuk-text-colour;
-  border-top: 2px solid $govuk-brand-colour;
+  color: govuk-functional-colour(text);
+  border-top: 2px solid govuk-functional-colour(brand);
 }
 
 .x-govuk-related-navigation__main-heading {
@@ -155,7 +155,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 }
 
 .x-govuk-related-navigation__nav-section {
-  border-top: 1px solid govuk-colour("mid-grey");
+  border-top: 1px solid govuk-colour('black', $variant: 'tint-80');
   margin-bottom: govuk-spacing(6);
 
   &:first-child {
@@ -195,7 +195,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 }
 
 .box-dfe {
-  border: 1px solid #b1b4b6;
+  border: 1px solid govuk-colour('black', $variant: 'tint-80');
 }
 
 section.dfe {
@@ -204,7 +204,7 @@ section.dfe {
 }
 
 .box-gov {
-  border: 1px solid #b1b4b6;
+  border: 1px solid govuk-colour('black', $variant: 'tint-80');
 }
 
 .box-ext {
@@ -346,7 +346,7 @@ html
   display: block;
   width: 99%;
   border: 1px #003a6a solid;
-  background-color: #f3f2f1;
+  background-color: govuk-colour('black', $variant: 'tint-95');
   margin: 0;
   padding: 0;
   @include govuk-responsive-margin(6, "bottom");
@@ -431,7 +431,7 @@ html
 }
 
 .gem-c-metadata a:hover {
-  color: #003078
+  color: govuk-colour('blue', $variant: 'shade-50');
 }
 
 .gem-c-metadata a:active {
@@ -540,7 +540,7 @@ html
 
 .gem-c-print-link__button {
   display: block;
-  border: 1px solid #505a5f;
+  border: 1px solid govuk-colour('black', $variant: 'tint-25');
   color: #1d70b8;
   cursor: pointer;
   margin: 0;
