--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -50,7 +50,9 @@ table, tr, td, th, thead, tbody, tfoot, thead th {
   background-color: #ffffff;
 }
 
-.govuk-template--rebranded {
+.govuk-template {
+  background-color: inherit;
+  
   .govuk-header {
     background-color: #ffffff;
   }
@@ -65,6 +67,10 @@ table, tr, td, th, thead, tbody, tfoot, thead th {
   .govuk-header__link:focus .govuk-header__logotype{
     content: url(/assets/department-for-education_black.png);
     height: 30px;
+  }
+  
+  .govuk-footer {
+    display: none;
   }
 }
 
@@ -123,10 +129,6 @@ table, tr, td, th, thead, tbody, tfoot, thead th {
   [href^="/"].govuk-link::after, [href^="http://"].govuk-link::after, [href^="https://"].govuk-link::after {
     display: none;
   }
-}
-
-.govuk-template {
-  background-color: inherit;
 }
 
 .dfe-section.dfe.box-ext {
@@ -257,14 +259,6 @@ p
   content: "";
   font-size: inherit;
   word-wrap: inherit;
-}
-
-.govuk-template--rebranded .govuk-footer {
-  display: none;
-}
-
-.govuk-template--rebranded {
-  background-color: inherit;
 }
 
 .dfe-card-link-print-url,
