--- a/src/web/CareLeavers.Web/Views/Shared/_ErrorLayout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_ErrorLayout.cshtml
@@ -21,7 +21,7 @@
 }
 
 <!DOCTYPE html>
-<html class="@(SiteConfiguration.Rebrand ? "govuk-template--rebranded" : "govuk-template")" lang="en">
+<html class="govuk-template" lang="en">
 
 <head>
     <meta charset="utf-8"/>
@@ -33,22 +33,12 @@
             --siteurl: '@Url.ActionLink("Homepage", "Contentful", protocol: "https")';
         }
     </style>
-    @if (SiteConfiguration.Rebrand)
-    {
-        <link rel="icon" sizes="48x48" href="/assets/rebrand/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/rebrand/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="mask-icon" href="/assets/rebrand/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/rebrand/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="manifest" href="/assets/rebrand/manifest.json">
-    }
-    else
-    {
-        <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="manifest" href="/assets/manifest.json">
-    }
+
+    <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="manifest" href="/assets/manifest.json">
     
     <meta name="apple-mobile-web-app-title" content="Support for care leavers" />
     
