--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 }
 
 <!DOCTYPE html>
-<html class="@(SiteConfiguration.Rebrand ? "govuk-template--rebranded" : "govuk-template")" dir="@language.Direction" lang="@languageCode">
+<html class="govuk-template" dir="@language.Direction" lang="@languageCode">
 
 <head>
     @if (WebHostEnvironment.IsProduction() && !string.IsNullOrEmpty(scriptConfig.GTM))
@@ -94,22 +94,12 @@
             --siteurl: '@Url.ActionLink("GetContent", "Contentful", values: new { slug = config.HomePage?.Slug, languageCode}, protocol: "https")';
         }
     </style>
-    @if (SiteConfiguration.Rebrand)
-    {
-        <link rel="icon" sizes="48x48" href="/assets/rebrand/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/rebrand/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="mask-icon" href="/assets/rebrand/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/rebrand/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="manifest" href="/assets/rebrand/manifest.json">
-    }
-    else
-    {
-        <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
-        <link rel="manifest" href="/assets/manifest.json">
-    }
+
+    <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="manifest" href="/assets/manifest.json">
 
     <meta name="apple-mobile-web-app-title" content="@config.ServiceName" />
     
