refactor: new link for accessibility page

--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -12,7 +12,7 @@
                             @Html.ActionLink("Cookie policy", "CookiePolicy", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                         </li>
                         <li class="govuk-footer__inline-list-item">
-                            @Html.ActionLink("Accessibility statement", "AccessibilityStatement", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
+                            <a class="govuk-footer__link" href="https://accessibility-statements.education.gov.uk/s/65">Accessibility statement</a>
                         </li>
                         <li class="govuk-footer__inline-list-item">
                             @Html.ActionLink("Privacy policies", "PrivacyPolicies", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
